--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.3.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "classnames": "^2.2.6",
+    "next": "^9.3.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
